# neuralguard

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
docs/: DECISIONS.md  INSTALL.md  ROADMAP.md  UPDATER.md
gui/: .gitignore  NeuralGuard.slnx
gui/NeuralGuard/: App.xaml  App.xaml.cpp  App.xaml.h  ColWidths.cpp  ColWidths.h  ColWidths.idl  ColumnGrip.cpp  ColumnGrip.h  ColumnGrip.idl  Db.h  InsightsView.idl  InsightsView.xaml  InsightsView.xaml.cpp  InsightsView.xaml.h  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  NeuralGuard.vcxproj  NeuralGuard.vcxproj.filters  Package.appxmanifest  Row.cpp  Row.h  Row.idl  SemBrush.cpp  app.manifest  pch.h  readme.txt
gui/NeuralGuard/Themes/: NeuralGuardColors.xaml
installer/: NeuralGuard.iss
scripts/: gen_nav_icons.py  make-manifest.ps1  package.ps1  requirements-ml.txt  train_anomaly.py
src/common/: wfp_util.h
src/core/: db.cpp  db.h  enforcer.cpp  enforcer.h  flowstats.cpp  flowstats.h  identity.cpp  identity.h  prompt.cpp  prompt.h  signer.cpp  signer.h  updater.cpp  updater.h  util.h  version.h
src/ngctl/: main.cpp
src/ngd/: enforce.cpp  enforce.h  main.cpp  recorder.cpp  recorder.h  service.cpp  service.h
src/ngmon/: main.cpp
src/ngtray/: dashboard.cpp  main.cpp
